# ane-websocket

./: .gitignore
CSharpLibrary/: WebSocketClientNativeLibrary.sln
CSharpLibrary/WebSocketClientNativeLibrary/: ExportFunctions.cs  IPAddressComparer.cs  JsonDnsDoh.cs  WebSocketClient.cs  WebSocketClientNativeLibrary.csproj
CSharpLibrary/WebSocketClientTest/: Class1.cs  WebSocketClientTest.csproj
androidNative/: settings.gradle.kts
androidNative/app/: build.gradle.kts
androidNative/gradle/: libs.versions.toml
androidNative/gradle/wrapper/: gradle-wrapper.properties
aneBuild/: build-mac-csharp.sh  build-windows-csharp.bat  build.bat  copy-mac-ios-files.bat  extension.xml  package-ane.bat  platformAndroid.xml  platformIOS.xml
aneBuild/macos/WebSocketANE.framework/: WebSocketANE
aneBuild/macos/WebSocketANE.framework/Headers/: WebSocketANE.h
aneBuild/macos/WebSocketANE.framework/Modules/: module.modulemap
aneBuild/macos/WebSocketANE.framework/Resources/: Info.plist
aneBuild/macos/WebSocketANE.framework/_CodeSignature/: CodeResources
macNative/: libraries.sh
macNative/WebSocketANE-mac/: WebSocketClient.cpp  WebSocketClient.hpp  WebSocketNativeLibrary.h  WebSocketSupport.cpp  WebSocketSupport.hpp  log.cpp
macNative/WebSocketANE.xcodeproj/: project.pbxproj
macNative/WebSocketANE.xcodeproj/project.xcworkspace/xcuserdata/joaovitorborges.xcuserdatad/: UserInterfaceState.xcuserstate
macNative/WebSocketANE.xcodeproj/xcshareddata/xcschemes/: WebSocketANE.xcscheme
src/br/com/redesurftank/: AndroidWebSocket.as
windowsNative/: CMakeLists.txt
windowsNative/src/: CSharpLibraryWrapper.cpp  CSharpLibraryWrapper.h  FileLoggerStream.cpp  FileLoggerStream.h  UrlLoaderNativeLibrary.cpp  UrlLoaderNativeLibrary.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketClient.hpp  WebSocketNativeLibrary.cpp  WebSocketNativeLibrary.h  WebSocketSupport.cpp  WebSocketSupport.hpp  library.cpp  library.h  log.cpp
(+6 files in other folders)
